tests/ui/non_item.stderr
error: expected one of: `struct`, `enum`, `union`
 --> tests/ui/non_item.rs:4:1
  |
4 | const _: () = ();
  | ^^^^^
